# dbt-audit-helper-ext

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  dbt_project.yml  dependencies.yml  package-lock.yml  plan-issue-38.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-pr.yml
docs/: breaking-changes-v0.11.md  breaking-changes-v0.9.md  configure-legacy-table-name.md  custom-column-expressions.md  dbt-variables-reference.md  getting-started.md  script__validation__all.md  validation-incremental-load.md
docs/scripts-reference/: create_dbt_jobs_as_code.md  create_validation_macros.md  validation__all.md
integration_tests/: dbt_project.yml  package-lock.yml
integration_tests/dataops/: dbt_cloud_jobs.yml  docker-compose.postgres.yml  docker-compose.sqlserver.yml  init.postgres.sql  init.sqlserver.sql
integration_tests/dev/: dev.profiles.yml
integration_tests/dev/bigquery/: profiles.yml
integration_tests/dev/databricks/: profiles.yml
integration_tests/dev/postgres/: profiles.yml
integration_tests/dev/snowflake/: profiles.yml  snowflake.init.sql
integration_tests/dev/sqlserver/: profiles.yml
integration_tests/macros/: generate_schema_name.sql
integration_tests/models/: sample_target_3.sql
integration_tests/models/03_mart/: sample_target_1.sql  sample_target_2.sql  sample_target_3.sql  sample_target_4.sql  sample_target_5.sql
integration_tests/seeds/: sample_source_1.csv  sample_source_11.csv
integration_tests/seeds/sample/: sample_target_1.csv  sample_target_2.csv
integration_tests/tests/: verify_detail_table__sample_1__columns.sql  verify_detail_table__sample_1__has_identical_rows.sql  verify_detail_table__sample_1__metadata.sql  verify_detail_table__sample_1__no_identical_rows.sql  verify_detail_table__sample_1__row_limit.sql
macros/_audit_helper/: compare_all_columns.sql  compare_relation_columns.sql  compare_relations.sql  get_column_specs.sql  get_column_specs.yml
macros/_audit_helper/sqlserver/: compare_column_values_verbose.sql  compare_queries.sql  compare_relation_columns.sql
macros/audit_helper/sqlserver/: compare_all_columns.sql
macros/clone/: clone_relation.sql  clone_relation.yml  get_versioned_name.yml
macros/clones/: clone_relation.sql  clone_relation.yml  get_versioned_identifier.sql  get_versioned_identifier.yml  get_versioned_name.sql
macros/column_expressions/: resolve_column_expression_macro.sql  resolve_column_expression_macro.yml
macros/column_expressions/numeric/: cast_to_int.sql  round_2dp.sql  round_4dp.sql
macros/column_expressions/string/: trim_lower.sql  trim_upper.sql
macros/dwh/: clone_object.sql  clone_object.yml  clone_relation.sql  clone_relation.yml  clone_relation_extended.sql  clone_relation_extended.yml  clone_schema.sql  clone_schema.yml  clone_schema_day0.sql  clone_schema_day0.yml  create_or_replace_table_as.sql  create_or_replace_table_as.yml  drop_object.sql  drop_object.yml
macros/relation/: create_or_replace_table_as.sql  get_model_config_from_graph.sql  get_model_config_from_graph.yml  get_model_node.sql  get_model_node.yml  get_relation.sql  get_relation.yml  get_source_node.sql  get_source_node.yml  is_iceberg_table.sql
macros/relations/: get_model_node.yml  get_relation.sql
macros/sql/: compare_row_counts_by_group_sql.sql  compare_row_counts_by_group_sql.yml  json_field_sql.sql  json_table_sql.sql  safe_cast_sql.sql  safe_cast_sql.yml  show_columns_conflicts_sql.sql  string_agg_sql.sql
macros/sql/general/: array_length_sql.sql  array_length_sql.yml  json_field_sql.sql  json_table_sql.sql  json_table_sql.yml  safe_cast_sql.sql  string_agg_sql.yml
macros/sql/report/: aggregate_data_type_mismatch_detail_sql.sql  aggregate_data_type_mismatch_detail_sql.yml  aggregate_schema_mismatch_detail_sql.sql  aggregate_schema_mismatch_detail_sql.yml  aggregate_upstream_row_count_sql.sql  aggregate_upstream_row_count_sql.yml  deduplicate_with_row_number_sql.sql  deduplicate_with_row_number_sql.yml  extract_mart_folder_sql.sql  extract_mart_folder_sql.yml  join_json_table_sql.sql  join_json_table_sql.yml
macros/sql/validation/: show_columns_conflicts_sql.sql  show_columns_conflicts_sql.yml
macros/sqls/: json_field_sql.yml  json_table_sql.sql
macros/utilities/: convert_query_result_to_list.sql  convert_query_result_to_list.yml  date_of_process.sql  get_int_models_row_count.sql  get_namespace.sql  log_validation_result.sql
macros/utility/: convert_query_result_to_list.sql  convert_query_result_to_list.yml  convert_to_str_and_list.sql  convert_to_str_and_list.yml  date_of_process.sql  date_of_process.yml  get_actual_column_name.sql  get_actual_column_name.yml  get_intersecting_columns.sql  get_old_identifier_name.sql  get_versioned_name.sql  job_run_url.sql  job_started_at.sql  job_url.sql  print_validation_result_status.sql  print_validation_result_status.yml
macros/utility/discrepancy/: generate_sample_query.sql
macros/utility/filter_validation_result/: filter_count_validation.sql  filter_full_validation.sql  filter_schema_validation.sql  (+5 more)
macros/validation/: get_upstream_row_count.sql  get_validation_all_col.sql  get_validation_all_col.yml  get_validation_count.sql  get_validation_count.yml  get_validation_count_by_group.sql  get_validation_count_by_group.yml  get_validation_full.sql  get_validation_schema.sql  get_validation_schema.yml  log_validation_detail_result.sql  log_validation_detail_result.yml  log_validation_result.sql  print_audit_result.sql  run_audit_query.sql  run_audit_query.yml  show_validation_columns_conflicts.sql  show_validation_columns_conflicts.yml
macros/validations/: get_upstream_row_count.sql  get_upstream_row_count.yml  get_validation_count.sql  get_validation_full.yml  log_validation_result.yml  print_audit_result.sql  print_audit_result.yml  run_audit_query.yml
models/: validation_log.sql  validation_log.yml  validation_log_report.sql  validation_log_report.yml
scripts/: common.py  create_dbt_jobs_as_code.py  create_validation_macros.py  validation__all.sh  validation__model.sh
(+57 files in other folders)
