[tool.poetry]
name = "dbt-audit-helper-ext"
version = "0.0.0"
description = "Extended audit helper 💪"
authors = ["Infinite Lambda <contact@infinitelambda.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/infinitelambda/dbt-audit-helper-ext"
homepage = "https://infinitelambda.com"
keywords = ["packaging", "dbt", "data-quality", "audit-helper", "markdown", "lint", "migration", "data-diff"]
classifiers = [
  "Topic :: dbt Package Development :: Documentation",
  "Topic :: dbt Package Development :: Testing",
  "Topic :: dbt Package :: Validation",
  "Topic :: dbt Package :: Migration",
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9"
dbt-core = "^1.7.0"

[tool.poetry.group.snowflake]
optional = true
[tool.poetry.group.snowflake.dependencies]
dbt-snowflake = "^1.7.0"

[tool.poetry.group.bigquery]
optional = true
[tool.poetry.group.bigquery.dependencies]
dbt-bigquery = "^1.7.0"

[tool.poetry.group.postgres]
optional = true
[tool.poetry.group.postgres.dependencies]
dbt-postgres = "^1.7.0"

[tool.poetry.group.sqlserver]
optional = true
[tool.poetry.group.sqlserver.dependencies]
dbt-sqlserver = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17.0"
poethepoet = "^0.16.4"
sqlfluff = "^2.3.5"
sqlfluff-templater-dbt = "^2.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.sqlfluff.core]
templater = "dbt"
dialect = "snowflake"
sql_file_exts = ".sql,.sql.j2,.dml,.ddl"
max_line_length = 120

[tool.sqlfluff.templater.dbt]
profile = "audit_helper_ext"

[tool.sqlfluff.rules]
allow_scalar = true
single_table_references = "consistent"
unquoted_identifiers_policy = "all"

[tool.sqlfluff.layout.type.comma]
line_position = "leading"

[tool.sqlfluff.indentation]
tab_space_size = 2
indent_unit = "space"

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.functions]
capitalisation_policy = "lower"

[tool.sqlfluff.templater]
unwrap_wrapped_queries = true

[tool.sqlfluff.templater.jinja]
apply_dbt_builtins = true

[tool.poe.tasks]
git-hooks = { shell = "pre-commit install --install-hooks && pre-commit install --hook-type commit-msg" }
format = [
  {cmd = "dbt clean"},
  {cmd = "dbt deps"},
  {cmd = "sqlfluff format . --dialect snowflake"},
]
lint = [
  {cmd = "dbt clean"},
  {cmd = "dbt deps"},
  {cmd = "sqlfluff lint . --dialect snowflake"},
]
verify = [
  {cmd = "dbt deps --project-dir integration_tests"},
  {cmd = "dbt debug --project-dir integration_tests"},
]
init = [
  {cmd = "dbt deps --project-dir integration_tests"},
  {cmd = "dbt run -s audit_helper_ext --project-dir integration_tests"},
  {cmd = "dbt seed --project-dir integration_tests"},
]
build = [
  {cmd = "dbt build --exclude audit_helper_ext --project-dir integration_tests"},
]
init-sf = { cmd = "poe init" }
init-bq = { cmd = "poe init" }
init-ms = [
  {cmd = "poe ms-up"},
  {env = { DBT_PROFILES_DIR = "integration_tests/dev/sqlserver", DBT_TARGET = "mssql" }, cmd = "poe init"},
]
init-pg = [
  {cmd = "poe pg-up"},
  {env = { DBT_PROFILES_DIR = "integration_tests/dev/postgres", DBT_TARGET = "pg" }, cmd = "poe init"},
]

build-sf = { cmd = "poe build" }
build-bq = { cmd = "poe build" }
build-ms = { env = { DBT_PROFILES_DIR = "integration_tests/dev/sqlserver", DBT_TARGET = "mssql" }, cmd = "poe build" }
build-pg = { env = { DBT_PROFILES_DIR = "integration_tests/dev/postgres", DBT_TARGET = "pg" }, cmd = "poe build" }

gen = [
  {shell = "cd integration_tests && python dbt_packages/audit_helper_ext/scripts/create_validation_macros.py models/03_mart"},
  {shell = "cd integration_tests && python dbt_packages/audit_helper_ext/scripts/create_dbt_jobs_as_code.py models/03_mart"}
]
validate-sample-1 = [
  {shell = "cd integration_tests && dbt_packages/audit_helper_ext/scripts/validation__all.sh -m sample_1"}
]
validate-sample-1-incremental = [
  {shell = "cd integration_tests && dbt_packages/audit_helper_ext/scripts/validation__all.sh -m sample_1 -p 2024-09-13"}
]
validate-customers = [
  {shell = "cd integration_tests && dbt_packages/audit_helper_ext/scripts/validation__all.sh -m customers"}
]
validate-items = [
  {shell = "cd integration_tests && dbt_packages/audit_helper_ext/scripts/validation__all.sh -m items"}
]
validate-orders = [
  {shell = "cd integration_tests && dbt_packages/audit_helper_ext/scripts/validation__all.sh -m orders"}
]
validate-products = [
  {shell = "cd integration_tests && dbt_packages/audit_helper_ext/scripts/validation__all.sh -m products"}
]
validate-stores = [
  {shell = "cd integration_tests && dbt_packages/audit_helper_ext/scripts/validation__all.sh -m stores"}
]
validate-supplies = [
  {shell = "cd integration_tests && dbt_packages/audit_helper_ext/scripts/validation__all.sh -m supplies"}
]
validate--disable-print-table = [
  {shell = "cd integration_tests && dbt run-operation validation_count__sample_1 --vars '{audit_helper__print_table_enabled: no}'"}
]
validate--pg-single-max-parallel = [
  {shell = "cd integration_tests && dbt run-operation validation_count__sample_1 --vars '{audit_helper__audit_query_pre_hooks: [\"SET max_parallel_workers_per_gather = 1\"]}' --profiles-dir dev/postgres --target pg"}
]

validate = [
  {cmd = "poe validate-sample-1"},
  {cmd = "poe validate-sample-1-incremental"},
  {cmd = "poe validate-customers"},
  {cmd = "poe validate-items"},
  {cmd = "poe validate-orders"},
  {cmd = "poe validate-products"},
  {cmd = "poe validate-stores"},
  {cmd = "poe validate-supplies"},
  {cmd = "poe validate--disable-print-table"},
]
validate-sf = { cmd = "poe validate" }
validate-bq = { cmd = "poe validate" }
validate-ms = { env = { DBT_PROFILES_DIR = "dev/sqlserver", DBT_TARGET = "mssql" }, cmd = "poe validate" }
validate-pg = [
  {env = { DBT_PROFILES_DIR = "dev/postgres", DBT_TARGET = "pg" }, cmd = "poe validate"},
  {cmd = "poe validate--pg-single-max-parallel"},
]

all = [
  {cmd = "poe init"},
  {cmd = "poe validate"},
]
validate-all-warehouses = [
  {cmd = "poe validate-sf"},
  {cmd = "poe validate-bq"},
  {cmd = "poe validate-ms"},
  {cmd = "poe validate-pg"},
]

# PostgreSQL Docker management
pg-up = [
  {shell = "cd integration_tests/dataops && docker compose -f docker-compose.postgres.yml up -d"},
  {shell = "echo 'Waiting for PostgreSQL to be ready...' && sleep 5"},
]
pg-down = [
  {shell = "cd integration_tests/dataops && docker compose -f docker-compose.postgres.yml down -v"},
]

# SQL Server Docker management
ms-up = [
  {shell = "cd integration_tests/dataops && docker compose -f docker-compose.sqlserver.yml up -d"},
  {shell = "echo 'Waiting for SQL Server to be ready...' && sleep 30"},
  {shell = "docker exec audit_helper_ext_sqlserver /opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P 'YourStrong@Passw0rd' -C -i /docker-entrypoint-initdb.d/init.sql"},
]
ms-down = [
  {shell = "cd integration_tests/dataops && docker compose -f docker-compose.sqlserver.yml down -v"},
]

git-push-github = [
  {cmd = "git remote set-url origin https://github.com/infinitelambda/dbt-audit-helper-ext.git"},
  {cmd = "git push"},
  {cmd = "git remote set-url origin git@gitlab.infinitelambda.com:infinitelambda/bi-chapter/dbt-audit-helper-ext.git"}
]
git-pull-github = [
  {cmd = "git remote set-url origin https://github.com/infinitelambda/dbt-audit-helper-ext.git"},
  {cmd = "git pull"},
  {cmd = "git remote set-url origin git@gitlab.infinitelambda.com:infinitelambda/bi-chapter/dbt-audit-helper-ext.git"},
  {cmd = "git push"}
]
